# resume_parser

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run_app.py
app/: database.py  main.py  models.py  schemas.py
app/core/: config.py
app/routes/: resume_routes.py
app/services/: file_service.py  llm_service.py  parser_service.py
app/utils/: extractor.py  logger.py
ui/: streamlit_app.py
